[HIN-113]: connect the image proxy only to the address it checked
The image proxy checked every resolved address and then let the JDK client
resolve the name again, a window a rebinding DNS server could use. It now
goes through OkHttp with the same lookup as the calendar fetcher: resolve
once, check every answer, connect to exactly those. Both fetchers share it
from common, together with the capped body reader.

- PublicDns: lookups on their own threads without a queue and with a
  timeout, a client without proxy, connection pool, redirects or retries,
  and the test for hosts OkHttp connects to without a lookup.
- CappedBody: the byte cap counted inside the read, gzip unpacked with
  packed and unpacked bytes counted, the source always closed.
- Image proxy: plainly written public addresses stay allowed, ambiguous
  spellings such as 127.1 or 2130706433 and the host "." are refused
  without a lookup, every redirect is looked up and checked again, and
  one fetch has 25 seconds including redirects.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>